exports[`test it displays the given value in the label and input for the item. 1`] = `
<li
  className="">
  <div
    className="view">
    <input
      checked={undefined}
      className="toggle"
      onChange={undefined}
      type="checkbox" />
    <label>
      Test Value
    </label>
    <button
      className="destroy"
      onClick={undefined} />
  </div>
  <input
    className="edit"
    onChange={undefined}
    value="Test Value" />
</li>
`;

exports[`test it shows the input as checked if the item is completed. 1`] = `
<li
  className="completed">
  <div
    className="view">
    <input
      checked={true}
      className="toggle"
      onChange={undefined}
      type="checkbox" />
    <label />
    <button
      className="destroy"
      onClick={undefined} />
  </div>
  <input
    className="edit"
    onChange={undefined}
    value={undefined} />
</li>
`;

exports[`test it shows the input as un-checked if the item is not completed. 1`] = `
<li
  className="">
  <div
    className="view">
    <input
      checked={undefined}
      className="toggle"
      onChange={undefined}
      type="checkbox" />
    <label />
    <button
      className="destroy"
      onClick={undefined} />
  </div>
  <input
    className="edit"
    onChange={undefined}
    value={undefined} />
</li>
`;

exports[`test it shows the items in editing mode if the item has editing prop set. 1`] = `
<li
  className="editing">
  <div
    className="view">
    <input
      checked={undefined}
      className="toggle"
      onChange={undefined}
      type="checkbox" />
    <label />
    <button
      className="destroy"
      onClick={undefined} />
  </div>
  <input
    className="edit"
    onChange={undefined}
    value={undefined} />
</li>
`;
